--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -81,3 +81,12 @@
     font-size: 20px;
   }
 }
+.links {
+  display: flex;
+  column-gap: 20px;
+  justify-content: center;
+  padding-top: 10px;
+}
+.links a {
+  color: rgb(190 188 202);
+}
